[gd_scene load_steps=20 format=3 uid="uid://cd0uh1gl3j2yw"]

[ext_resource type="Script" path="res://scenes/gui/scripts/user_interface.gd" id="1_yi5nn"]
[ext_resource type="FontFile" uid="uid://w38canxb0m7h" path="res://assets/m3x6.ttf" id="2_bjn10"]
[ext_resource type="Shader" path="res://scenes/gui/hud.gdshader" id="3_7gy3i"]
[ext_resource type="Texture2D" uid="uid://pq257rnhg4kq" path="res://scenes/gui/UI_Flat_Frame_01_Lite.png" id="4_uljkb"]
[ext_resource type="FontFile" uid="uid://m1jk0peka30j" path="res://assets/m6x11.ttf" id="5_idxdv"]
[ext_resource type="Script" path="res://scenes/gui/scripts/main_menu.gd" id="6_bkcvo"]
[ext_resource type="Script" path="res://scenes/gui/highscore.gd" id="8_m2itb"]
[ext_resource type="PackedScene" uid="uid://dk4ou3pvhb2sb" path="res://scenes/gui/level_up/perk_selection.tscn" id="10_ydmd8"]
[ext_resource type="Script" path="res://scenes/gui/scripts/game_over.gd" id="13_dfpqu"]
[ext_resource type="PackedScene" uid="uid://c31qiyem3lskq" path="res://scenes/gui/heads_up_display.tscn" id="14_5ryc4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bkx1e"]
shader = ExtResource("3_7gy3i")
shader_parameter/lod = 0.922

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_470lq"]
bg_color = Color(0.290196, 0.290196, 0.290196, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fjoo"]
bg_color = Color(0.247059, 0.247059, 0.247059, 0.576471)

[sub_resource type="Theme" id="Theme_nwmpy"]

[sub_resource type="Theme" id="Theme_e68rp"]
default_font = ExtResource("2_bjn10")
default_font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkqd6"]
content_margin_left = 85.0
content_margin_top = 4.0
content_margin_right = 85.0
content_margin_bottom = 4.0
bg_color = Color(0.814387, 0.909493, 0.950738, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjc1o"]
bg_color = Color(0.97065, 0.59733, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnj5q"]
bg_color = Color(0.780392, 0.403922, 0, 1)

[sub_resource type="Theme" id="Theme_0sm5v"]
Button/colors/font_color = Color(0, 0.87451, 0.87451, 1)
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("5_idxdv")
Button/styles/hover = SubResource("StyleBoxFlat_jjc1o")
Button/styles/normal = SubResource("StyleBoxFlat_nnj5q")

[node name="UserInterface" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_yi5nn")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenu"]
material = SubResource("ShaderMaterial_bkx1e")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/MarginContainer2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PauseMenu/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_470lq")

[node name="PauseControls" type="MarginContainer" parent="PauseMenu/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer2/HBoxContainer/PauseControls"]
custom_minimum_size = Vector2(240, 200)
layout_mode = 2
size_flags_vertical = 4

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer2/HBoxContainer/PauseControls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_idxdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_8fjoo")
text = "Quit"

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer2/HBoxContainer/PauseControls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_idxdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_8fjoo")
text = "Resume"

[node name="MainMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_bkcvo")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -58.0
offset_right = 147.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nwmpy")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_e68rp")

[node name="NinePatchRect2" type="NinePatchRect" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("4_uljkb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="play" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_idxdv")
text = "start"
flat = true

[node name="NinePatchRect3" type="NinePatchRect" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("4_uljkb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="options" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/NinePatchRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_idxdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_dkqd6")
text = "fullscreen"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("4_uljkb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="exit" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_idxdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_dkqd6")
text = "exit"
flat = true

[node name="NinePatchRect4" type="NinePatchRect" parent="MainMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("4_uljkb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="DungeonGen" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/NinePatchRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_idxdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_dkqd6")
text = "testing map"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="MainMenu"]
layout_mode = 0
offset_right = 419.0
offset_bottom = 505.0

[node name="Control" type="Control" parent="MainMenu/MarginContainer2"]
layout_mode = 2
script = ExtResource("8_m2itb")

[node name="HTTPRequest" type="HTTPRequest" parent="MainMenu/MarginContainer2/Control"]

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu/MarginContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "score1
score2
score3
etc"

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("13_dfpqu")

[node name="MarginContainer" type="MarginContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("5_idxdv")
theme_override_font_sizes/font_size = 64
text = "Game Over"

[node name="RestartButton" type="Button" parent="GameOverMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_0sm5v")
text = "Restart
"

[node name="HeadsUpDisplay" parent="." instance=ExtResource("14_5ryc4")]
visible = false

[node name="PerkSelection" parent="." instance=ExtResource("10_ydmd8")]
visible = false

[connection signal="pressed" from="PauseMenu/MarginContainer2/HBoxContainer/PauseControls/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer2/HBoxContainer/PauseControls/VBoxContainer/Resume" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/NinePatchRect2/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/NinePatchRect3/options" to="MainMenu" method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/NinePatchRect/exit" to="MainMenu" method="_on_exit_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/NinePatchRect4/DungeonGen" to="." method="_on_dungeon_gen_pressed"]
[connection signal="pressed" from="GameOverMenu/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
